apply plugin: "java"
 
sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

repositories {
    jcenter()
}

dependencies {
	compile("com.microsoft.sqlserver:mssql-jdbc:6.1.0.jre7")
	
	compile("net.dv8tion:JDA:4.2.0_168")
	
	compile("org.apache.logging.log4j:log4j-core:2.14.0")
	
	compile("org.slf4j:slf4j-simple:1.7.30")
	
	compile("org.apache.httpcomponents:httpclient:4.5.13")
	
	compile("com.googlecode.json-simple:json-simple:1.1.1")
	
	compile("commons-io:commons-io:2.5")
	
	testCompile("org.testng:testng:6.14.3")
	
	testCompile("org.mock-server:mockserver-netty:5.11.2")
	compile("org.mock-server:mockserver-client-java:5.11.2")
	testImplementation("org.mock-server:mockserver-client-java:5.11.2")
}

test {
	useTestNG() {
		listeners.add("ca.darrensjones.jonesbot.testcore.BotTestListener")
		suites "testng.xml"
		testLogging.showStandardStreams = true
	}
}